# crowd_gram

./: .dockerignore  .env  .env.example  .gitignore  1.0.1  2.0  3.0  Dockerfile  English users_sample_agent.xlsx  English users_sample_reviewer.xlsx  Hausa Batch 1 users_sample_with_passwords.xlsx  MYREADE.md  Pidgin Batch 1 users_sample_with_passwords.xlsx  README.md  conpress_video.py  docker-compose.yml  english.json  h dsn spotongit push dsn spotonq  hausa.json  init_db.sql  main.py  pidgin.json  pyproject.toml  requirements.txt  ruff.toml
QA_check_tests/: img_quality_checks_tests.py  text_coherence_check_test.py  text_language_validation_test.py
src/: config.py  loader.py
src/constant/: auth_constants.py  task_constants.py  test_knowledge_constant.py
src/data/: audio_quiz.json  community_mock_data.py  country.py  country_state.py  image_2_quiz.json  image_quiz.json  language_dialect.py  quiz.json  sample_text.py  test_knowledge_quiz.json  video_2_quiz.json  video_quiz.json  video_tutorials.py
src/database/: db.py  models.py
src/keyboards/: auth.py  auth_keyboard.py  dynamic.py  inline.py  onboarding_keyboard.py  reply.py
src/menu/: set_menu.py
src/middlewares/: auth.py  logging.py  rediscache.py  response.py
src/models/: auth_models.py  company_models.py  onboarding_models.py  task_models.py  usermodel.py
src/responses/: auth_response.py  onboarding_response.py  project_responses.py  status_response.py  task_formaters.py
src/routes/: telegram_tracker.py
src/services/: backend.py  language_selection.py  location_service.py  notifications.py  (+5 more)
(+136 files in other folders)
