[project]
name = "crowd-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.22.0",
    "langid>=1.1.6",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pycountry>=24.6.1",
    "pydantic[email]>=2.11.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "transformers>=4.57.1",
    "watchfiles>=1.1.1",
]
