[project]
name = "crowd-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.22.0",
    "better-profanity>=0.7.0",
    "geopy>=2.4.1",
    "langid>=1.1.6",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "noisereduce>=3.0.3",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pycountry>=24.6.1",
    "pydantic[email]>=2.11.10",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "watchfiles>=1.1.1",
]
